k8s/raw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi-route

spec:
  parentRefs:
  - name: fastapi-gateway
  rules:
    - matches: 
      - path: 
          type: PathPrefix
          value: /
      backendRefs:
        - name: fastapi-app
          port: 80
